oauth2-proxy/OIDC/oauth2-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
      - args:
        - --provider=oidc
        - --upstream=file:///dev/null
        - --whitelist-domain=.comcast.net
        - --reverse-proxy=true
        - --oidc-issuer-url=https://login.microsoftonline.com/906aefe9-76a7-4f65-b82d-5ec20775d5aa/v2.0
        - --redeem-url=https://login.microsoftonline.com/906aefe9-76a7-4f65-b82d-5ec20775d5aa/oauth2/v2.0/token
        - --set-xauthrequest=true
        - --set-authorization-header=true
        - --pass-authorization-header=true
        - --email-domain=comcast.com
        - --client-id=02e6bf4b-aee5-466e-99ab-12ef7bd7b093
        - --client-secret=__Secret__
        - --cookie-secret=bGZEcWZDeU1wUjU3VUJYcHRaQXhkUT09
        - --http-address=0.0.0.0:4180
        - --redirect-url=https://authtest.cdnlab.comcast.net/oauth2/callback
        image: quay.io/oauth2-proxy/oauth2-proxy:latest
        imagePullPolicy: Always
        name: oauth2-proxy
        ports:
        - containerPort: 4180
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 4180
    protocol: TCP
    targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
